# AdventOfCode

./: .gitignore  pyproject.toml
2015/: day1.py  utils.py
2024/: day1.py  day2.py
utils/: pyproject.toml  utils.py
